--- a/citizensfla-consumer-theme/pom.xml
+++ b/citizensfla-consumer-theme/pom.xml
@@ -3,9 +3,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.citizensfla.plugins</groupId>
-	<artifactId>citizens-theme</artifactId>
+	<artifactId>citizens-consumer-theme</artifactId>
 	<packaging>war</packaging>
-	<name>citizens-theme Theme</name>
+	<name>citizens-consumer-theme Theme</name>
 	<version>1.0.0-SNAPSHOT</version>
 	<build>
 		<plugins>
@@ -90,7 +90,7 @@
 	<properties>
 		<liferay.version>6.2.1</liferay.version>
 		<liferay.maven.plugin.version>6.2.10.9</liferay.maven.plugin.version>
-		<liferay.auto.deploy.dir>c:/home/tools/liferay-portal-6.2-ee-sp8/deploy</liferay.auto.deploy.dir>
+		<liferay.auto.deploy.dir>C:/home/tools/liferay-portal-6.2-ee-sp8/deploy</liferay.auto.deploy.dir>
 		<liferay.theme.parent>_styled</liferay.theme.parent>
 		<liferay.theme.type>vm</liferay.theme.type>
 	</properties>
